--- a/style/moodle.css
+++ b/style/moodle.css
@@ -1381,6 +1381,17 @@ a.disabled {
 #fgroup_id_sdays > .fgroup > span {
   display: inline-block;
 }
+#page-course-view-weeks.format-weeks.theme-snap #page-header #page-mast,
+#page-course-view-topics.format-topics.theme-snap #page-header #page-mast {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+}
+#page-course-view-weeks.format-weeks.theme-snap #page-header #page-mast h1,
+#page-course-view-topics.format-topics.theme-snap #page-header #page-mast h1 {
+  display: inline-block;
+}
 /* admin.less  */
 .formtable tbody th {
   font-weight: normal;
@@ -17474,9 +17485,7 @@ section#region-main
 .format-topics.editing.pagelayout-course #page-mast .singlebutton,
 .format-weeks.editing.pagelayout-course #page-mast .singlebutton {
   float: right;
-  margin-top: -3.2em;
-  margin-right: -4%;
-  display: block;
+  display: inline-block;
 }
 .format-topics.editing.pagelayout-course #page-mast .singlebutton input[type="submit"],
 .format-weeks.editing.pagelayout-course #page-mast .singlebutton input[type="submit"] {
